--- a/src/main/resources/Fxml/Books.fxml
+++ b/src/main/resources/Fxml/Books.fxml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.librarymanager.Controllers.BookController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane fx:id="mainPane" stylesheets="@../Styles/Book.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanager.Controllers.BookController">
 
-</AnchorPane>
+        <top>
+            <Label styleClass="heading" text="📚 Book Management" />
+        </top>
+
+        <center>
+            <TableView fx:id="bookTable" prefWidth="600">
+                <columns>
+                    <TableColumn fx:id="titleColumn" prefWidth="200" text="Title" />
+                    <TableColumn fx:id="authorColumn" prefWidth="150" text="Author" />
+                    <TableColumn fx:id="yearColumn" prefWidth="100" text="Year" />
+                </columns>
+            </TableView>
+        </center>
+
+        <right>
+            <VBox spacing="10" style="-fx-padding: 10;">
+                <Label style="-fx-font-size: 18px;" text="Add New User" />
+
+                <TextField fx:id="titleField" promptText="Title" />
+                <TextField fx:id="authorField" promptText="Author" />
+                <TextField fx:id="yearField" promptText="Year" />
+
+                <Button  text="Add Book" />
+
+            </VBox>
+        </right>
+
+        <bottom>
+            <HBox spacing="10" style="-fx-padding: 10;">
+                <Label text="Search:" />
+                <TextField fx:id="searchField" promptText="Type to filter..." />
+            </HBox>
+        </bottom>
+
+    </BorderPane>
