--- a/src/main/resources/Fxml/Dashboard.fxml
+++ b/src/main/resources/Fxml/Dashboard.fxml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane cacheShape="false" dividerPositions="1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.example.librarymanager.Controllers.DashboardController">
-<items>
-    <AnchorPane maxWidth="200.0" prefWidth="200.0" style="-fx-background-color: transparent;">
-                    <VBox>
-                        <fx:include source="Sidebar.fxml" />
-                    </VBox>
-    </AnchorPane>
-    <AnchorPane prefWidth="1000.0">
-                    <VBox>
-                        <fx:include source="Dash.fxml" />
-                    </VBox>
-    </AnchorPane>
-</items>
-</SplitPane>
+<BorderPane cacheShape="false"
+            xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.librarymanager.Controllers.DashboardController"
+            fx:id="dash_Parent"
+>
+    <left>
+        <VBox>
+            <fx:include source="Sidebar.fxml" />
+        </VBox>
+    </left>
+    <center>
+        <VBox maxWidth="1.7976931348623157E308">
+            <fx:include source="Dash.fxml" />
+        </VBox>
+    </center>
+</BorderPane>
