--- a/src/main/resources/Fxml/Books.fxml
+++ b/src/main/resources/Fxml/Books.fxml
@@ -1,48 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="mainPane" stylesheets="@../Styles/Book.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanager.Controllers.BookController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/Book.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanager.Controllers.BookController">
+    <!-- Formulaire d'ajout -->
+    <VBox alignment="TOP_CENTER" spacing="10">
+        <Label styleClass="form-title" text="Ajouter un Livre" />
 
-        <top>
-            <Label styleClass="heading" text="📚 Book Management" />
-        </top>
+        <Label text="Titre:" />
+        <TextField fx:id="titleField" promptText="Titre du livre" />
 
-        <center>
-            <TableView fx:id="bookTable" prefWidth="600">
-                <columns>
-                    <TableColumn fx:id="titleColumn" prefWidth="200" text="Title" />
-                    <TableColumn fx:id="authorColumn" prefWidth="150" text="Author" />
-                    <TableColumn fx:id="yearColumn" prefWidth="100" text="Year" />
-                </columns>
-            </TableView>
-        </center>
+        <Label text="Auteur:" />
+        <TextField fx:id="authorField" promptText="Auteur du livre" />
 
-        <right>
-            <VBox spacing="10" style="-fx-padding: 10;">
-                <Label style="-fx-font-size: 18px;" text="Add New User" />
+        <Label text="Image:" />
+        <Button fx:id="chooseImageButton" onAction="#handleChooseImage" text="Choisir une Image" />
 
-                <TextField fx:id="titleField" promptText="Title" />
-                <TextField fx:id="authorField" promptText="Author" />
-                <TextField fx:id="yearField" promptText="Year" />
-
-                <Button  text="Add Book" />
-
-            </VBox>
-        </right>
-
-        <bottom>
-            <HBox spacing="10" style="-fx-padding: 10;">
-                <Label text="Search:" />
-                <TextField fx:id="searchField" promptText="Type to filter..." />
-            </HBox>
-        </bottom>
-
-    </BorderPane>
+        <Button fx:id="addBookButton" onAction="#handleAddBook" styleClass="primary-button" text="Ajouter le Livre" />
+    </VBox>
+   <ScrollPane prefHeight="200.0" prefWidth="200.0">
+     <content>
+       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+     </content>
+   </ScrollPane>
+</HBox>
