--- a/src/main/resources/Fxml/BookCard.fxml
+++ b/src/main/resources/Fxml/BookCard.fxml
@@ -22,9 +22,21 @@
 <!--                  <Insets bottom="10.0" />-->
 <!--               </padding>-->
             </Label>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="book-button" text="More">
+            <Button fx:id="BooksDetailsButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="book-button" text="More">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
+               </graphic>
+            </Button>
+            
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="book-button" text="Modifier">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" />
+               </graphic>
+            </Button>
+            
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="book-button" text="Supprimer">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
                </graphic>
             </Button>
          </children>
