--- a/src/main/resources/Fxml/BookDetails.fxml
+++ b/src/main/resources/Fxml/BookDetails.fxml
@@ -41,14 +41,14 @@
               <Label text="Category" GridPane.rowIndex="4" />
               <Label text="Année de publication" GridPane.rowIndex="3" />
               <Label text="ISBN" GridPane.rowIndex="2" />
-              <TextField fx:id="bookTitleTextField" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" />
-              <TextField fx:id="bookAuthorTextField" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-              <TextField fx:id="isbnTextField" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-              <TextField fx:id="yearTextField" layoutX="290.0" layoutY="19.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-              <TextField fx:id="categoryTextField" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-              <TextField fx:id="totalCopiesTextField" prefHeight="26.0" prefWidth="222.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+              <TextField fx:id="bookTitleTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" />
+              <TextField fx:id="bookAuthorTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              <TextField fx:id="isbnTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <TextField fx:id="yearTextField" editable="false" layoutX="290.0" layoutY="19.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+              <TextField fx:id="categoryTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+              <TextField fx:id="totalCopiesTextField" editable="false" prefHeight="26.0" prefWidth="222.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label alignment="TOP_LEFT" layoutX="10.0" layoutY="209.0" text="Copies disponibles" GridPane.rowIndex="6" />
-            <TextField fx:id="availableCopiesTextField" layoutX="10.0" layoutY="242.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="availableCopiesTextField" editable="false" layoutX="10.0" layoutY="242.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
           </GridPane>
          <VBox prefHeight="294.0" prefWidth="206.0" HBox.hgrow="ALWAYS">
             <children>
@@ -57,7 +57,7 @@
                      <Insets bottom="10.0" />
                   </VBox.margin>
                </Label>
-               <TextArea fx:id="bookDescriptionArea" prefHeight="242.0" prefWidth="228.0" promptText="Description Ici..." wrapText="true" VBox.vgrow="ALWAYS">
+               <TextArea fx:id="bookDescriptionArea" editable="false" prefHeight="242.0" prefWidth="228.0" promptText="Description Ici..." wrapText="true" VBox.vgrow="ALWAYS">
                   <VBox.margin>
                      <Insets bottom="10.0" />
                   </VBox.margin>
