--- a/src/main/resources/Fxml/BookDetails.fxml
+++ b/src/main/resources/Fxml/BookDetails.fxml
@@ -35,11 +35,11 @@
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
       
-                    <Label text="Titre" />
-              <Label text="Autheur" GridPane.rowIndex="1" />
-              <Label alignment="TOP_LEFT" text="Copies totales" GridPane.rowIndex="5" />
+                    <Label text="Title" />
+              <Label text="Author" GridPane.rowIndex="1" />
+              <Label alignment="TOP_LEFT" text="Total Copies" GridPane.rowIndex="5" />
               <Label text="Category" GridPane.rowIndex="4" />
-              <Label text="Année de publication" GridPane.rowIndex="3" />
+              <Label text="Year of Publication" GridPane.rowIndex="3" />
               <Label text="ISBN" GridPane.rowIndex="2" />
               <TextField fx:id="bookTitleTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" />
               <TextField fx:id="bookAuthorTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -47,7 +47,7 @@
               <TextField fx:id="yearTextField" editable="false" layoutX="290.0" layoutY="19.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
               <TextField fx:id="categoryTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
               <TextField fx:id="totalCopiesTextField" editable="false" prefHeight="26.0" prefWidth="222.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label alignment="TOP_LEFT" layoutX="10.0" layoutY="209.0" text="Copies disponibles" GridPane.rowIndex="6" />
+            <Label alignment="TOP_LEFT" layoutX="10.0" layoutY="209.0" text="Available Copies" GridPane.rowIndex="6" />
             <TextField fx:id="availableCopiesTextField" editable="false" layoutX="10.0" layoutY="242.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
           </GridPane>
          <VBox prefHeight="294.0" prefWidth="206.0" HBox.hgrow="ALWAYS">
@@ -57,7 +57,7 @@
                      <Insets bottom="10.0" />
                   </VBox.margin>
                </Label>
-               <TextArea fx:id="bookDescriptionArea" editable="false" prefHeight="242.0" prefWidth="228.0" promptText="Description Ici..." wrapText="true" VBox.vgrow="ALWAYS">
+               <TextArea fx:id="bookDescriptionArea" editable="false" prefHeight="242.0" prefWidth="228.0" promptText="Description Here..." wrapText="true" VBox.vgrow="ALWAYS">
                   <VBox.margin>
                      <Insets bottom="10.0" />
                   </VBox.margin>
@@ -78,8 +78,8 @@
 
     <ButtonBar layoutX="398.0" layoutY="565.0" prefHeight="40.0" prefWidth="218.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="32.0">
       <buttons>
-          <Button fx:id="returnButton" mnemonicParsing="false" text="Rendre" />
-          <Button fx:id="borrowButton" layoutX="204.0" layoutY="17.0" mnemonicParsing="false" text="Emprunter" />
+          <Button fx:id="returnButton" mnemonicParsing="false" text="Return" />
+          <Button fx:id="borrowButton" layoutX="204.0" layoutY="17.0" mnemonicParsing="false" text="Borrow" />
       </buttons>
     </ButtonBar>
 </AnchorPane>
