--- a/src/main/resources/Fxml/BookDetails.fxml
+++ b/src/main/resources/Fxml/BookDetails.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="600.0" stylesheets="@../Styles/BookDetails.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanager.Controllers.BookDetailsController">
    <ImageView fx:id="bookImageView" fitHeight="230.0" fitWidth="200.0" layoutX="200.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="14.0" />
@@ -35,11 +34,11 @@
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
       
-                    <Label text="Titre" />
-              <Label text="Autheur" GridPane.rowIndex="1" />
-              <Label alignment="TOP_LEFT" text="Copies totales" GridPane.rowIndex="5" />
+                    <Label text="Title" />
+              <Label text="Author" GridPane.rowIndex="1" />
+              <Label alignment="TOP_LEFT" text="Total Copies" GridPane.rowIndex="5" />
               <Label text="Category" GridPane.rowIndex="4" />
-              <Label text="Année de publication" GridPane.rowIndex="3" />
+              <Label text="Publish Year" GridPane.rowIndex="3" />
               <Label text="ISBN" GridPane.rowIndex="2" />
               <TextField fx:id="bookTitleTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" />
               <TextField fx:id="bookAuthorTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -47,7 +46,7 @@
               <TextField fx:id="yearTextField" editable="false" layoutX="290.0" layoutY="19.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
               <TextField fx:id="categoryTextField" editable="false" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
               <TextField fx:id="totalCopiesTextField" editable="false" prefHeight="26.0" prefWidth="222.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label alignment="TOP_LEFT" layoutX="10.0" layoutY="209.0" text="Copies disponibles" GridPane.rowIndex="6" />
+            <Label alignment="TOP_LEFT" layoutX="10.0" layoutY="209.0" text="Total copies available" GridPane.rowIndex="6" />
             <TextField fx:id="availableCopiesTextField" editable="false" layoutX="10.0" layoutY="242.0" prefHeight="26.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
           </GridPane>
          <VBox prefHeight="294.0" prefWidth="206.0" HBox.hgrow="ALWAYS">
@@ -57,13 +56,10 @@
                      <Insets bottom="10.0" />
                   </VBox.margin>
                </Label>
-               <TextArea fx:id="bookDescriptionArea" editable="false" prefHeight="242.0" prefWidth="228.0" promptText="Description Ici..." wrapText="true" VBox.vgrow="ALWAYS">
+               <TextArea fx:id="bookDescriptionArea" editable="false" prefHeight="242.0" prefWidth="228.0" promptText="Description here..." wrapText="true" VBox.vgrow="ALWAYS">
                   <VBox.margin>
                      <Insets bottom="10.0" />
                   </VBox.margin>
-                  <font>
-                     <Font name="System Italic" size="12.0" />
-                  </font>
                </TextArea>
             </children>
             <padding>
@@ -78,8 +74,7 @@
 
     <ButtonBar layoutX="398.0" layoutY="565.0" prefHeight="40.0" prefWidth="218.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="32.0">
       <buttons>
-          <Button fx:id="returnButton" mnemonicParsing="false" text="Rendre" />
-          <Button fx:id="borrowButton" layoutX="204.0" layoutY="17.0" mnemonicParsing="false" text="Emprunter" />
+          <Button fx:id="borrowButton" layoutX="204.0" layoutY="17.0" mnemonicParsing="false" text="Borrow" />
       </buttons>
     </ButtonBar>
 </AnchorPane>
